cmake_minimum_required(VERSION 3.17)
project(atcoder)

set(CMAKE_CXX_STANDARD 11)

add_executable(ABC116_C ABC116/C/main.cpp)
add_executable(ABC189_A ABC189/A/main.cpp)
add_executable(ABC189_B ABC189/B/main.cpp)
add_executable(ABC189_C ABC189/C/main.cpp)
add_executable(ABC189_D ABC189/D/main.cpp)
add_executable(ABC189_E ABC189/E/main.cpp)
add_executable(ABC189_F ABC189/F/main.cpp)
add_executable(Atcoder_Beginners_Selection_Welcome_to_AtCoder Atcoder_Beginners_Selection/Welcome_to_AtCoder/main.cpp)
add_executable(Atcoder_Beginners_Selection_Product Atcoder_Beginners_Selection/Product/main.cpp)
add_executable(Atcoder_Beginners_Selection_Placing_Marbles Atcoder_Beginners_Selection/Placing_Marbles/main.cpp)
add_executable(Atcoder_Beginners_Selection_Shift_only Atcoder_Beginners_Selection/Shift_only/main.cpp)
add_executable(Atcoder_Beginners_Selection_Coins Atcoder_Beginners_Selection/Coins/main.cpp)
add_executable(Atcoder_Beginners_Selection_Some_Sums Atcoder_Beginners_Selection/Some_Sums/main.cpp)
add_executable(Atcoder_Beginners_Selection_Card_Game_for_Two Atcoder_Beginners_Selection/Card_Game_for_Two/main.cpp)
add_executable(Atcoder_Beginners_Selection_Kagami_Mochi Atcoder_Beginners_Selection/Kagami_Mochi/main.cpp)
add_executable(Atcoder_Beginners_Selection_Otoshidama Atcoder_Beginners_Selection/Otoshidama/main.cpp)
add_executable(Atcoder_Beginners_Selection_Day_Dream Atcoder_Beginners_Selection/Day_Dream/main.cpp)
add_executable(Atcoder_Beginners_Selection_Traveling Atcoder_Beginners_Selection/Traveling/main.cpp)
