cmake_minimum_required(VERSION 3.17)
project(atcoder)

set(CMAKE_CXX_STANDARD 17)

add_executable(ABC116_C ABC116/C/main.cpp)
add_executable(ABC189_A ABC189/A/main.cpp)
add_executable(ABC189_B ABC189/B/main.cpp)
add_executable(ABC189_C ABC189/C/main.cpp)
add_executable(ABC189_D ABC189/D/main.cpp)
add_executable(ABC189_E ABC189/E/main.cpp)
add_executable(ABC189_F ABC189/F/main.cpp)
add_executable(Atcoder_Beginners_Selection_Welcome_to_AtCoder Atcoder_Beginners_Selection/Welcome_to_AtCoder/main.cpp)
add_executable(Atcoder_Beginners_Selection_Product Atcoder_Beginners_Selection/Product/main.cpp)
add_executable(Atcoder_Beginners_Selection_Placing_Marbles Atcoder_Beginners_Selection/Placing_Marbles/main.cpp)
add_executable(Atcoder_Beginners_Selection_Shift_only Atcoder_Beginners_Selection/Shift_only/main.cpp)
add_executable(Atcoder_Beginners_Selection_Coins Atcoder_Beginners_Selection/Coins/main.cpp)
add_executable(Atcoder_Beginners_Selection_Some_Sums Atcoder_Beginners_Selection/Some_Sums/main.cpp)
add_executable(Atcoder_Beginners_Selection_Card_Game_for_Two Atcoder_Beginners_Selection/Card_Game_for_Two/main.cpp)
add_executable(Atcoder_Beginners_Selection_Kagami_Mochi Atcoder_Beginners_Selection/Kagami_Mochi/main.cpp)
add_executable(Atcoder_Beginners_Selection_Otoshidama Atcoder_Beginners_Selection/Otoshidama/main.cpp)
add_executable(Atcoder_Beginners_Selection_Day_Dream Atcoder_Beginners_Selection/Day_Dream/main.cpp)
add_executable(Atcoder_Beginners_Selection_Traveling Atcoder_Beginners_Selection/Traveling/main.cpp)
add_executable(ABC190_A ABC190/A/main.cpp)
add_executable(ABC190_B ABC190/B/main.cpp)
add_executable(ABC190_C ABC190/C/main.cpp)
add_executable(ABC190_D ABC190/D/main.cpp)
add_executable(ABC191_A ABC191/A/main.cpp)
add_executable(ABC191_B ABC191/B/main.cpp)
add_executable(ABC191_C ABC191/C/main.cpp)
add_executable(ABC191_D ABC191/D/main.cpp)
add_executable(ABC106_A ABC106/A/main.cpp)
add_executable(ABC106_B ABC106/B/main.cpp)
add_executable(ABC106_C ABC106/C/main.cpp)
add_executable(ABC106_D ABC106/D/main.cpp)
add_executable(ABC192_A ABC192/A/main.cpp)
add_executable(ABC192_B ABC192/B/main.cpp)
add_executable(ABC192_C ABC192/C/main.cpp)
add_executable(ABC192_D ABC192/D/main.cpp)
add_executable(ABC192_E ABC192/E/main.cpp)
add_executable(ABC193_A ABC193/A/main.cpp)
add_executable(ABC193_B ABC193/B/main.cpp)
add_executable(ABC193_C ABC193/C/main.cpp)
add_executable(ABC193_D ABC193/D/main.cpp)
add_executable(ABC194_A ABC194/A/main.cpp)
add_executable(ABC194_B ABC194/B/main.cpp)
add_executable(ABC194_C ABC194/C/main.cpp)
add_executable(ABC194_D ABC194/D/main.cpp)
add_executable(ARC115_A ARC115/A/main.cpp)
add_executable(ARC115_B ARC115/B/main.cpp)
add_executable(ARC011_A ARC011/A/main.cpp)
add_executable(ABC096_C ABC096/C/main.cpp)
add_executable(ABC072_C ABC072/C/main.cpp)
